# team_notebook

./: 2chinese.cpp  CMakeLists.txt  Main.java  README.md  aho-corasick.cpp  all.cxx  bridges.cpp  cartesian.cpp  centroid_decomposition.cpp  circles.cpp  closest_points.cpp  convex_3d.cpp  convex_hull.cpp  convex_hull_trick.cpp  cut_point.cpp  dynamic_connectivity.cpp  fft.cpp  heavy_light_decomposition  heavy_light_decomposition.cpp  hungarian.cpp  inclosed_circle.cpp  karatsuba.cpp  manacher.cpp  maxFlow.cpp  minCostFlow.cpp  numtheory.cpp  planarity_test.cpp  point.h  queue_min.cpp  semi_planes.cpp  semi_planes_acc.cpp  suffix_array.cpp  suffix_automaton_arr.cpp  suffix_automaton_map.cpp  tangents.cpp  walsh-transform.cpp
